<resources>
    <string name="app_name">WeMark</string>
    <string name="btn_recommend">推荐</string>
    <string name="btn_focus">关注</string>
    <string name="btn_hot">最热</string>
    <string name="btn_latest">最新</string>
    <string name="map">地图</string>
    <string name="list">列表</string>
    <string name="locate">定位</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="repeatPassword">重复密码</string>
    <string name="account">邮箱账号</string>
    <string name="nickname">昵称</string>
    <string name="receive_email">确认注册</string>
    <string name="askSignUp">尚无账号？前往注册</string>
    <string name="askLogin">已有账号？前往登陆</string>
    <string name="recyclerview_fab_example">RecyclerView FAB example</string>
    <string name="floating_action_menu">Floating Action Menu</string>
    <string name="navigation_drawer_open">Navigation open</string>
    <string name="navigation_drawer_close">Navigation close</string>
    <string name="image_btn_add">添加照片</string>
    <string name="add_friend">添加朋友</string>
    <string name="edit_mark_name">填写Mark名称</string>
    <string name="edit_mark_addr">填写Mark地址</string>
    <string name="hint_edit">记录下坐标的信息…</string>
    <string name="radio_public">公开</string>
    <string name="radio_private">私密</string>
    <string name="radio_some">部分可见</string>
    <string name="edit_sure">确定</string>
    <string name="edit_save">保存</string>
    <string name="icon_name">头像</string>
    <string name="signature">个性签名</string>
    <string name="background">背景图片</string>
    <string name="title_activity_contact">ContactActivity</string>
</resources>
