<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/blue"
            android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="72dp"
                   android:src="@mipmap/ic_launcher"
                   android:layout_marginBottom="22dp"
                   android:layout_gravity="center_horizontal" />

        <!--  Account/Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_login_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/account"
                      android:textColor="@color/black"
                      android:textStyle="normal"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="30dp">
            <EditText android:id="@+id/input_login_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/password"
                      android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/blue_lite"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login"
            android:textSize="16dp"
            android:textStyle="normal"
            android:textColor="@color/white"/>

        <TextView android:id="@+id/link_signup"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/askSignUp"
                  android:textStyle="normal"
                  android:textColor="@color/white"
                  android:gravity="center"
                  android:textSize="14dp"/>

    </LinearLayout>
</ScrollView>